--- a/Press Release/style.css
+++ b/Press Release/style.css
@@ -50,7 +50,7 @@ h3 {
   line-height: 1.28577;
   font-weight: 700;
   letter-spacing: -0.016em;
-  margin-bottom: 4px;
+  margin-bottom: 20px;
   text-align: left;
 }
 
@@ -71,13 +71,19 @@ p {
   font-weight: 400;
   font-style: italic;
   color: #666666;
-  margin: 20px 0 30px;
-  padding: 15px 0;
+  margin: 0px 0 30px; /* Reduced top margin from 40px to 10px to bring closer to image */
+  padding: 5px 0;
   text-align: left;
+}
+br{
+  line-height: 2.5; 
+  display: block;
+  margin: 8px 0;
 }
 
 strong {
   font-weight: 700;
+  
 }
 
 /* Elementos de artículo */
@@ -93,6 +99,7 @@ ul {
   text-align: left;
   list-style-type: none;
   color: #1d1d1f;
+  
 }
 
 li {
@@ -102,8 +109,9 @@ li {
 
 /* Listas anidadas */
 ul ul {
-  margin-top: 8px;
+  margin-top: 30px;
   margin-left: 2em;
+  margin-bottom: 30px;
   list-style-type: disc;
   
 }
@@ -115,7 +123,7 @@ ul ul li {
 }
 
 /* Centrar elementos específicos */
-.header {
+header {
   text-align: left;
   margin-bottom: 40px;
   width: 400px;
@@ -125,16 +133,18 @@ ul ul li {
 
 .main-image {
   text-align: left;
-  margin: 40px 0;
+  margin: 20px 0 0 ;
   width: 100%;
 }
 
 .main-image img {
   max-width: 100%;
   height: auto;
+  border-radius: 8px;
+  margin-bottom: 10px; 
 }
 
-.main-content {
+main {
   text-align: left;
   width: 500px;
   margin-left: auto;
@@ -143,7 +153,7 @@ ul ul li {
 
 .awards-list {
   text-align: left;
-  width: 500px;
+  width: 550px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -165,10 +175,30 @@ ul ul li {
   text-align: left;
 }
 
+.share-article {
+  text-align: left;
+  margin: 40px auto;
+  width: 500px;
+}
+.share-article .social-icons {
+  display: flex;
+  justify-content: flex-start;
+  gap: 20px;
+  margin: 0;
+  padding: 20px 0;
+  width: 400px;
+}
 .about-apple-tv {
   text-align: left;
   margin: 60px auto 40px;
   width: 500px;
+  
+  font-size: 8px;
+}
+.about-apple-tv p {
+  
+  font-size: 12px;
+  color: #666666;
 }
 
 .press-contacts {
@@ -180,6 +210,7 @@ ul ul li {
 .press-contacts a {
   color: #007AFF;
   text-decoration: none;
+  font-size: 12px;
 }
 
 .press-contacts a:hover {
@@ -210,49 +241,46 @@ ul ul li {
 }
 
 .social-icon:hover {
-  background-color: #e8e8ed;
+  background-color: #000000;
   transform: translateY(-2px);
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
-}
-
-.social-icon.facebook:hover {
-  background-color: #1877F2;
-  border-color: #1877F2;
-}
-
-.social-icon.facebook:hover svg path {
-  fill: white;
-}
-
-.social-icon.twitter:hover {
-  background-color: #000000;
   border-color: #000000;
 }
 
-.social-icon.twitter:hover svg path {
+.social-icon:hover svg path {
   fill: white;
 }
 
-.social-icon.email:hover {
-  background-color: #34A853;
-  border-color: #34A853;
-}
-
-.social-icon.email:hover svg path {
-  fill: white;
-}
-
-.social-icon.link:hover {
-  background-color: #666666;
-  border-color: #666666;
-}
-
-.social-icon.link:hover svg path {
-  fill: white;
-}
+/* Individual social icon hover states removed as all now turn black */
 
 .social-icon svg {
   transition: all 0.3s ease;
   width: 18px;
   height: 18px;
+}
+
+/* Press Release Title */
+.press-release-title {
+  text-align: left;
+  margin-bottom: 40px;
+  padding-top: 40px;
+  width: 400px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.press-release-title p {
+  font-size: 14px;
+  line-height: 1.4;
+  font-weight: 500;
+  letter-spacing: 0.02em;
+  color: #666666;
+  margin-bottom: 8px;
+  text-transform: uppercase;
+  text-align: left;
+}
+
+.press-release-title p:first-child {
+  font-weight: 500;
+  margin-bottom: 4px;
 }
