--- a/Press Release/style.css
+++ b/Press Release/style.css
@@ -16,13 +16,13 @@ body {
 }
 
 .content {
-  width: 653px;
+  width: 800px;
   margin: 0 auto;
 }
 
-/* Contenedor para texto con ancho reducido */
+/* Contenedor para texto con ancho ampliado */
 .text-container {
-  width: 400px;
+  width: 700px;
   margin: 0 auto;
 }
 
@@ -75,15 +75,14 @@ p {
   padding: 5px 0;
   text-align: left;
 }
-br{
-  line-height: 2.5; 
+br {
+  line-height: 2.5;
   display: block;
   margin: 8px 0;
 }
 
 strong {
   font-weight: 700;
-  
 }
 
 /* Elementos de artículo */
@@ -99,7 +98,6 @@ ul {
   text-align: left;
   list-style-type: none;
   color: #1d1d1f;
-  
 }
 
 li {
@@ -113,7 +111,6 @@ ul ul {
   margin-left: 2em;
   margin-bottom: 30px;
   list-style-type: disc;
-  
 }
 
 ul ul li {
@@ -126,14 +123,14 @@ ul ul li {
 header {
   text-align: left;
   margin-bottom: 40px;
-  width: 400px;
+  width: 700px;
   margin-left: auto;
   margin-right: auto;
 }
 
 .main-image {
   text-align: left;
-  margin: 20px 0 0 ;
+  margin: 20px 0 0;
   width: 100%;
 }
 
@@ -141,19 +138,19 @@ header {
   max-width: 100%;
   height: auto;
   border-radius: 8px;
-  margin-bottom: 10px; 
+  margin-bottom: 10px;
 }
 
 main {
   text-align: left;
-  width: 500px;
+  width: 700px;
   margin-left: auto;
   margin-right: auto;
 }
 
 .awards-list {
   text-align: left;
-  width: 550px;
+  width: 750px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -165,7 +162,7 @@ main {
 
 .shows-info {
   text-align: left;
-  width: 500px;
+  width: 700px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -178,7 +175,7 @@ main {
 .share-article {
   text-align: left;
   margin: 40px auto;
-  width: 500px;
+  width: 700px;
 }
 .share-article .social-icons {
   display: flex;
@@ -186,17 +183,16 @@ main {
   gap: 20px;
   margin: 0;
   padding: 20px 0;
-  width: 400px;
+  width: 700px;
 }
 .about-apple-tv {
   text-align: left;
   margin: 60px auto 40px;
-  width: 500px;
-  
+  width: 700px;
+
   font-size: 8px;
 }
 .about-apple-tv p {
-  
   font-size: 12px;
   color: #666666;
 }
@@ -204,11 +200,11 @@ main {
 .press-contacts {
   text-align: left;
   margin: 40px auto;
-  width: 500px;
+  width: 700px;
 }
 
 .press-contacts a {
-  color: #007AFF;
+  color: #007aff;
   text-decoration: none;
   font-size: 12px;
 }
@@ -224,7 +220,7 @@ main {
   gap: 20px;
   margin: 20px auto;
   padding: 20px 0;
-  width: 400px;
+  width: 700px;
 }
 
 .social-icon {
@@ -264,7 +260,7 @@ main {
   text-align: left;
   margin-bottom: 40px;
   padding-top: 40px;
-  width: 400px;
+  width: 700px;
   margin-left: auto;
   margin-right: auto;
 }
